Fix descriptions showing through on iPhone [#264]

--- a/theme/_css/layout.less
+++ b/theme/_css/layout.less
@@ -5,9 +5,7 @@
 	#Front Page Styles
 	#Header Styles
 	#Sidebar Styles
-	#Article Page Styles
-	#Media Queries
-	#Font-Face */
+	#Article Page Styles */
 
 /* #Front Page Styles
 ================================================== */
@@ -1568,23 +1566,6 @@
 		margin-bottom: 20px;
 	}
 
-/* #Media Queries
-================================================== */
+/* For media queries see skeleton.less */
 
-	/* Smaller than standard 960 (devices and browsers) */
-	@media only screen and (min-width: 768px) {}
-
-	/* Tablet Portrait size to standard 960 (devices and browsers) */
-	@media only screen and (min-width: 768px) and (max-width: 959px) {}
-
-	/* All Mobile Sizes (devices and browser) */
-	@media only screen and (max-width: 767px) {}
-
-	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-	@media only screen and (min-width: 480px) and (max-width: 767px) {}
-
-	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-	@media only screen and (max-width: 479px) {}
-	
-	/* Print layout - see print.css */
-	@media print {}
+/* For print layout see print.css */
