--- a/theme/_css/skeleton.less
+++ b/theme/_css/skeleton.less
@@ -87,8 +87,8 @@
 		.container blockquote.right 				{ margin-right: 0px !important; margin-left: 20px !important; }
 		.container .newsbox description				{ display: none !important; }
 		.container .newsbox.layoutlist description	{ display: block !important; }
-		.container .newsbox.section-blogs description		{ display: block !important; }
-		.container .newsbox.section-dossiers description	{ display: block !important; }
+		.container .newsbox.section-blogs .dsect description { display: block !important; }
+		.container .newsbox.section-dossiers .dsect description { display: block !important; }
 		.container .article_info					{ display: none; }
 		.container .article_info_mobile				{ display: block; }
 		.container .controlbar_mobile				{ display: block; }
